commit' exit cd cd .. git commit -m commit $ ' '

--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
                 </div>
             </div>
         </div>
-        <!-- <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script> -->
 
         <!-- Firebase App is always required and must be first -->
 <script src="https://www.gstatic.com/firebasejs/5.5.7/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+
 
 <!-- Add additional services that you want to use -->
 <script src="https://www.gstatic.com/firebasejs/5.5.7/firebase-auth.js"></script>
